# pokemon-trainer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/: human_agent.py  llm_agent.py  rl_agent.py
api/: server.py
core/: actions.py  agent_base.py  emulator.py  env_pokemon_red.py  env_wrappers.py  models.py  rom_utils.py  session_manager.py
examples/: interactive_play.py
replay/: replay_manager.py
tests/: test_agent_api.py  test_emulator.py  test_env_wrappers.py  test_pokemon_red_env.py  test_pyboy_env.py  test_rom_utils.py
