[project]
name = "pokemon-trainer"
version = "0.1.0"
description = "Unified Python framework for RL, LLM, and human agents to play Pokémon Red with spectators."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arcade>=3.1.0",
    "fastapi>=0.115.12",
    "gymnasium>=1.1.1",
    "opencv-python>=4.11.0.86",
    "pillow>=11.0.0",
    "pyboy>=2.5.2",
    "pydantic>=2.11.3",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "rich>=14.0.0",
    "ruff>=0.11.6",
    "stable-baselines3>=2.6.0",
    "uvicorn[standard]>=0.34.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    "ignore:Using SDL2 binaries from pysdl2-dll.*:UserWarning",
]

[tool.ruff]
line-length = 100
exclude = [".git", "__pycache__", ".venv", "env", "build", "dist"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
